created and mined blocks

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,11 @@ name = "rust-blockchain"
 version = "0.1.0"
 edition = "2021"
 
+
+[[bin]]
+name = "rust-blockchain"
+path = "src/lib.rs"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
